# sync_folder

./: .gitignore  Cargo.toml  README.md  env.example
src/: main.rs
src/cli/: mod.rs
src/storage/: mod.rs
src/yandex/: mod.rs
