[package]
name = "sync_folder"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.1"
dotenv = "0.15.0"
futures = "0.3.32"
inquire = "0.9.4"
inquire-derive = "0.9.0"
reqwest = { version = "0.13.3", features = ["json"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
